This is my third commit adding a paragraph

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Python AI GitHub connection</h1>
-    
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque odio aut saepe magni nesciunt? Laboriosam repellat nisi omnis, perspiciatis qui obcaecati numquam, consectetur natus voluptatem, necessitatibus totam eius aliquid quos.</p>
 </body>
 </html>
